--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "tap": "^21.0.1"
   },
   "dependencies": {
+    "@vlasky/mysql": "^2.18.6",
     "big-integer": "1.6.52",
     "iconv-lite": "0.6.3",
-    "@vlasky/mysql": "^2.18.6"
+    "mysql2": "^3.15.1"
   }
 }
